tests/src/frontend/typechecking/invalid/static_ctor_call_without_ctor.sk
base class StaticClass {
  static fun test(): Nullable<StaticClass> {
    static(10)
  }
}
